# svg-hush

./: Cargo.toml
.github/workflows/: mayhem.yml  sync.yml
mayhem/: Dockerfile  Mayhemfile_filter  Mayhemfile_idempotent  Mayhemfile_url  build.sh  filter.mayhemfile  test.sh
mayhem/url/testsuite/: css1  css2
src/: data_url_filter.rs  lib.rs  main.rs
