[package]
name = "svg-hush"
authors = ["Cloudflare <https://cloudflare.com>"]
version = "0.9.6"
edition = "2024"
description = "Strip scripting and other abusable features from SVG files"
categories = ["multimedia::images"]
keywords = ["xss", "sanitizer", "purify", "filter", "security"]
license = "Apache-2.0 OR MIT"
exclude = ["tests/"]
repository = "https://github.com/cloudflare/svg-hush"
rust-version = "1.85"

[dependencies]
data-url = "0.3.2"
base64 = "0.22.1"
quick-error = "2.0.1"
url = "2.5.8"
xml = "1.2"

[package.metadata.release]
tag-name = "{{version}}"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
